[package]
name = "blockchain-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dslab-core = { git = "https://github.com/osukhoroslov/dslab.git" }
dslab-mp = { git = "https://github.com/osukhoroslov/dslab.git" }
rand = { version = "0.8.5"}
rand_chacha = "0.3.1"
serde = { version = "1.0.195", features = ["derive"] }
